<resources>
    <string name="app_name">Phone &amp; Contacts</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_recents">Recents</string>
    <string name="title_contacts">Contacts</string>
    <string name="search_hint">Search contacts...</string>
    <string name="no_contacts">No Contacts</string>
    <string name="add_contact_desc">Add your first contact to get started.</string>
    <string name="btn_add_contact">Add Contact</string>
    <string name="no_favorites">No Favorites Yet</string>
    <string name="add_to_favorites_desc">Add contacts to Favorites for quick access.</string>
    <string name="no_recent_calls">No Recent Calls</string>
    <string name="recent_calls_desc">Your recent calls will appear here.</string>
    <string name="new_contact">New Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="company">Company</string>
    <string name="job_title">Job title</string>
    <string name="address">Address</string>
    <string name="notes">Notes</string>
    <string name="save_contact">Save Contact</string>
    <string name="delete_contact_title">Delete Contact?</string>
    <string name="delete_contact_message">Are you sure you want to delete %1$s?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="favorite">Favorite</string>
    <string name="dialer">Dialer</string>
    <string name="calling">Calling...</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected</string>
    <string name="call_ended">Call Ended</string>
    <string name="incoming_call">Incoming call</string>
    <string name="outgoing_call">Outgoing call</string>
    <string name="missed_call">Missed call</string>
    <string name="no_sms_app">No messaging app available.</string>
</resources>
